Fix header and footer to use same css everywhere
- Add context variable for dark pages
- Add CSS for dark pages
- Make footer background the main body background so that pages that
  are too short extend the footer properly

--- a/web/static/web/css/base.css
+++ b/web/static/web/css/base.css
@@ -24,9 +24,14 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-
+    background-color: var(--footer-white);
     font-size: var(--font-size-regular);
     line-height: var(--line-height-regular);
+    .main-container {
+        background-color: var(--white);
+        padding-bottom: 32px;
+        padding-top: 32px;
+    }
 }
 
 
@@ -139,8 +144,7 @@ header {
     
     .header-title {
         width: 100%;
-        max-width: 768px;
-        margin: 0 auto;
+        margin: 32px auto 0 auto;
         h1 p {
             font-size: var(--font-size-small);
             line-height: var(--line-height-small);
@@ -180,7 +184,9 @@ main {
 
 footer {
     padding: 32px;
-    background-color: var(--footer-white);
+    width: 100%;
+    max-width: 1400px;
+    margin: 32px auto 0 auto;
 
     display: flex;
 
