--- a/web/static/web/css/home.css
+++ b/web/static/web/css/home.css
@@ -1,6 +1,5 @@
 header {
     position: relative;
-    background-image: none;
 
     > img {
         width: 100%;
@@ -20,22 +19,10 @@ header {
 }
 
 body {
-    background-image: url("../img/background_grain_opt.png");
-    color: white;
-
     main  {
+        color: white;
         a {
             border-bottom: 2px solid rgba(255, 255, 255, .5);
-        }
-    }
-
-    footer {
-        background-color: rgba(0, 0, 0, 0.1);
-        .footer-right {
-            color: rgba(255, 255, 255, 0.45);
-        }
-        p a {
-            color: rgba(255, 255, 255, 0.45);
         }
     }
 
